k8s/payments/templates/ingress/client-gateway.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-gateway-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-gateway
                port:
                  number: 3000
