k8s/payments/templates/ingress/webhooks.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhooks-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webhooks-service
                port:
                  number: 3000
